styles/globals.css
table,
th,
td {
  text-align: center;
}

table {
  min-width: 650px;
}

body {
  background: #efe6ee;
}

.logo {
  /* move the logo lower on the screen */
  margin-top: 5%;
}

.homescreen-button {
  background-color: #a577a3;
  color: #fff;
  border-radius: 15px;
  padding: 10px;
  margin: 3px;
}

th {
  font-size: x-large;
  color: #02c39a;
}

.Game {
  text-align: center;
  background-color: #bfb2c4;
  width: 100vw;
  height: 100vw;
}

body {
  padding: 0%;
  margin: 0;
}

.text-centered {
  padding: 5%;
  font-size: 30px;
  text-align: center;
}

nav {
  height: 60px;
  width: 100%;
  margin: 0;
  border-bottom: 1px solid grey;
  display: grid;
  place-items: center;
}

nav h1 {
  margin: 0;
  font-family: Helvetica, Arial, sans-serif;
  color: white;
  font-size: 45px;
}

.board-container {
  width: 100vw;
  height: calc(100vh - 170px);
  display: flex;
  align-items: center;
  padding-top: 50px;
  flex-direction: column;
  justify-content: center;
}

.board {
  width: 330px;
  height: 450px;
  display: flex;
  flex-direction: column;
}

.timer {
  font-size: 30px;
  font-weight: bold;
}

.keyboard {
  width: 100%;
}

#gameRow {
  display: grid;
  grid-gap: 5px;
  margin: 5px;
  grid-template-columns: repeat(5, 1fr);
}

.letter {
  flex: 33%;
  height: 50px;
  width: 50px;
  margin: 5px;
  display: grid;
  place-items: center;
  font-weight: bolder;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
}

.keysRow1 {
  flex: 33%;
  display: flex;
  flex-direction: row;
  display: flex;
  justify-content: center;
  margin: 5px;
}

.keysRow2 {
  flex: 33%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 5px;
}

.keysRow3 {
  flex: 33%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 5px;
}

.key {
  width: 40px;
  height: 56px;
  margin: 5px;
  border-radius: 4px;
  display: grid;
  place-items: center;
  font-size: 20px;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  cursor: pointer;
}

.progress-label {
  float: left;
  margin-right: 1em;
}

.enter {
  width: 80px;
  font-size: 18px;
}

.delete {
  width: 50px;
  font-size: 30px;
}

.progress-label {
  float: left;
  margin-right: 1em;
}

#correct {
  background-color: #66a05f;
  color: white;
}

#close {
  background-color: #b49f39;
  color: white;
}

#default {
  background-color: #ffffff;
}

#defaultGuess {
  background-color: #818181;
  color: white;
}

#disabledKey {
  background-color: #818181;
  color: white;
}

#correctKey {
  background-color: #66a05f;
  color: white;
}

#closeKey {
  background-color: #b49f39;
  color: white;
}

#defaultKey {
  background-color: #d2d6d9;
}

